Force ES version to 7.8.1

--- a/TODO
+++ b/TODO
@@ -8,3 +8,7 @@ of ansible
 permission on /opt/elasticsearch/conf/elasticsearch.keystore are incorrect and
 prevented restart of the sweagle_service_nameMaybe just an order issue as the
 code is there in xpack to set the correct ownship
+
+[SWEAGLE]
+Create service core (version>=3.13) does not seem to create the sweagleCore.service
+but running the command manually seems to
