--- a/TODO
+++ b/TODO
@@ -12,3 +12,5 @@ code is there in xpack to set the correct ownship
 [SWEAGLE]
 Create service core (version>=3.13) does not seem to create the sweagleCore.service
 but running the command manually seems to
+
+Same with starting it
